# punconsole1.0

./: .breakpoints  README.md  banner.txt  main.py  pyproject.toml
cmds/: bypassredirects.py  clearconsole.py  dnslookup.py  networkinfo.py  sysinfo.py
